- fixed overflow bug on arches array - piddling with text - added contact form

--- a/css/landing.css
+++ b/css/landing.css
@@ -10,6 +10,11 @@ html, body {
       
 }
 
+#contact
+{
+	background-image: url("./../img/grid.png");
+}
+
 .nav-margin
 {
 	margin-bottom: 0;
@@ -24,6 +29,9 @@ html, body {
 .whoiworkwith
 {
 	background: #262526;
+	margin-bottom: 20px;
+	font-size: 1.5em;
+	font-family: "comforta";
 }
 
 .clients
